--- a/index.html
+++ b/index.html
@@ -11,23 +11,32 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav>
+    <header><div class="container header-container">
+      <nav class="header-nav">
         <a href="./index.html" class="link logo"
           >WEB<span class="part-logo">STUDIO</span></a
         >
-        <ul class="menu">
+        <ul class="header-menu">
           <li><a href="" class="header-link link">Studio</a></li>
-          <li><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
+          <li>
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
+          </li>
           <li><a href="" class="header-link link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="contacts-list">
           <li>
             <a href="mailto:info@devstudio.com" class="header-link link"
               >info@devstudio.com</a
@@ -40,54 +49,57 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <main>
       <!-- Hero -->
-      <section class="hero">
+      <section class="section hero"><div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-btn">Order Service</button>
+      </div>
       </section>
 
-      <!-- Section one -->
-      <section>
+      <!-- Section feature -->
+      <section class="section"><div class="container">
         <h2 class="visually-hidden">Our goal</h2>
-        <ul>
+        <ul class="feature-list">
           <li>
-            <h3 class="caption">Strategy</h3>
-            <p class="caption-descr">
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="caption">Punctuality</h3>
-            <p class="caption-descr">
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="caption">Diligence</h3>
-            <p class="caption-descr">
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="caption">Technologies</h3>
-            <p class="caption-descr">
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
-      <!-- Section two -->
+      <!-- Section 2 -->
 
-      <section>
+      <section class="section sect-two"><div class="container">
         <h2 class="title">What are we doing</h2>
-        <ul>
+        <ul class="img-list">
           <li><img src="./images/img_1.jpg" alt="Monitor" width="360" /></li>
           <li><img src="./images/img_2.jpg" alt="Messenger" width="360" /></li>
           <li>
@@ -95,49 +107,56 @@
           </li>
         </ul>
       </section>
-      <section class="section-four">
-        <h2 class="title">Our Team</h2>
-        <ul>
-          <li class="project-card">
+
+      <!--  Section 3-->
+
+      <section class="section section-team">
+        <h2 class="title-team">Our Team</h2>
+        <ul class="card-list-container">
+          <li class="team-card">
             <img
               src="./images/img.product_designer.jpg"
               alt="Mark Guerrero"
               width="264"
-            />
-            <h3 class="caption">Mark Guerrero</h3>
-            <p class="descr">Product Designer</p>
+            /><div class="aside">
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="profession">Product Designer</p></div>
           </li>
-          <li class="project-card">
+          <li class="team-card">
             <img
               src="./images/img.frontend_developer.jpg"
               alt="Tom Ford"
               width="264"
-            />
-            <h3 class="caption">Tom Ford</h3>
-            <p class="descr">Frontend Developer</p>
+            /> <div class="aside">
+            <h3 class="name">Tom Ford</h3>
+            <p class="profession">Frontend Developer</p></div>
           </li>
-          <li class="project-card">
+          <li class="team-card">
             <img
               src="./images/img.marketing.jpg"
               alt="Camila Garcia"
               width="264"
-            />
-            <h3 class="caption">Camila Garcia</h3>
-            <p class="descr">Marketing</p>
+            /> <div class="aside">
+            <h3 class="name">Camila Garcia</h3>
+            <p class="profession">Marketing</p></div>
           </li>
-          <li class="project-card">
+          <li class="team-card">
             <img
               src="./images/img.ui_designer.jpg"
               alt="Daniel Wilson"
               width="264"
-            />
-            <h3 class="caption">Daniel Wilson</h3>
-            <p class="descr">UI Designer</p>
+            /> <div class="aside">
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="profession">UI Designer</p></div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
-    <footer>
+
+    <!--  Footer  -->
+
+    <footer><div class="container">
       <a href="./index.html" class="link logo"
         >WEB<span class="logo-foot">STUDIO</span></a
       >
@@ -145,6 +164,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
