--- a/portfolio.html
+++ b/portfolio.html
@@ -11,138 +11,202 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Header -->
+
     <header class="header">
-      <nav class="navigation">
-        <a href="./index.html" class="link logo">WEB<span class="part-logo">STUDIO</span></a>
-        <ul class="">
-          <li class="nav-item"><a href="./index.html" class="header-link link">Studio</a></li>
-          <li class="nav-item"><a href="" class="header-link link">Portfolio</a></li>
-          <li class="nav-item"><a href="" class="header-link link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="header-link link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container header-container">
+          <nav class="header-nav">
+            <a href="./index.html" class="link logo"
+              >WEB<span class="part-logo">STUDIO</span></a
+            >
+            <ul class="header-menu">
+              <li>
+                <a href="./index.html" class="header-link link">Studio</a>
+              </li>
+              <li>
+                <a href="" class="header-link link">Portfolio</a>
+              </li>
+              <li>
+                <a href="" class="header-link link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="adress">
+            <ul class="contacts-list">
+              <li>
+                <a href="mailto:info@devstudio.com" class="header-link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="header-link link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+      </div>
     </header>
     <!-- Section portfolio -->
     <main>
-      <section>
-        <h1 class="visually-hidden">Portfolio</h1>
-        <ul>
-          <li>
-            <button type="button" class="filters-btn">All</button>
-          </li>
-          <li><button type="button" class="filters-btn">Web Site</button></li>
-          <li><button type="button" class="filters-btn">App</button></li>
-          <li><button type="button" class="filters-btn">Design</button></li>
-          <li><button type="button" class="filters-btn">Marketing</button></li>
-        </ul>
-        <!-- Project card -->
-        <ul>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/img.bankapp.jpg"
-                alt="Banking App"
-                width="360"
-              />
-              <h2 class="card">Banking App Interface Concept</h2>
-              <p class="card-descr">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img src="./images/img.payment.jpg" alt="QR Code" width="360" />
-              <h2 class="card">Cashless Payment</h2>
-              <p class="card-descr">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/img.meditation.jpg"
-                alt="Laptop"
-                width="360"
-              />
-              <h2 class="card">Meditaion App</h2>
-              <p class="card-descr">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/img.taxi.jpg"
-                alt="Car front panel"
-                width="360"
-              />
-              <h2 class="card">Taxi Service</h2>
-              <p class="card-descr">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/img.screen.jpg"
-                alt="Smartphone"
-                width="360"
-              />
-              <h2 class="card">Screen Illustrations</h2>
-              <p class="card-descr">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img src="./images/img.courses.jpg" alt="Woman" width="360" />
-              <h2 class="card">Online Courses</h2>
-              <p class="card-descr">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/img.instagram.jpg"
-                alt="Stories"
-                width="360"
-              />
-              <h2 class="card">Instagram Stories Concept</h2>
-              <p class="card-descr">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"> 
-              <img
-                src="./images/img.food.jpg"
-                alt="String bag with vegetables"
-                width="360"
-              />
-              <h2 class="card">Organic Food</h2>
-              <p class="card-descr">Web Site</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img src="./images/img.coffe.jpg" alt="Coffe cup" width="360" />
-              <h2 class="card">Fresh Coffee</h2>
-              <p class="card-descr">Web Site</p></a
-            >
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul>
+            <div class="filters-container">
+              <li>
+                <button type="button" class="filters-btn">All</button>
+              </li>
+              <li>
+                <button type="button" class="filters-btn">Web Site</button>
+              </li>
+              <li><button type="button" class="filters-btn">App</button></li>
+              <li><button type="button" class="filters-btn">Design</button></li>
+              <li>
+                <button type="button" class="filters-btn">Marketing</button>
+              </li>
+            </div>
+          </ul>
+          <!-- Portfolio card -->
+          <ul class="portfolio-card">
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.bankapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Banking App Interface Concept</h2>
+                  <p class="card-descr">App</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.payment.jpg"
+                  alt="QR Code"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Cashless Payment</h2>
+                  <p class="card-descr">Marketing</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.meditation.jpg"
+                  alt="Laptop"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Meditaion App</h2>
+                  <p class="card-descr">App</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.taxi.jpg"
+                  alt="Car front panel"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Taxi Service</h2>
+                  <p class="card-descr">Marketing</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.screen.jpg"
+                  alt="Smartphone"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Screen Illustrations</h2>
+                  <p class="card-descr">Design</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img src="./images/img.courses.jpg" alt="Woman" width="360" />
+                <div class="project-content">
+                  <h2 class="title-card">Online Courses</h2>
+                  <p class="card-descr">Marketing</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.instagram.jpg"
+                  alt="Stories"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Instagram Stories Concept</h2>
+                  <p class="card-descr">Design</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./images/img.food.jpg"
+                  alt="String bag with vegetables"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Organic Food</h2>
+                  <p class="card-descr">Web Site</p>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/img.coffe.jpg"
+                  alt="Coffe cup"
+                  width="360"
+                />
+                <div class="project-content">
+                  <h2 class="title-card">Fresh Coffee</h2>
+                  <p class="card-descr">Web Site</p>
+                </div></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer>
-      <a href="./index.html" class="link logo">WEB<span class="logo-foot">STUDIO</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="link logo"
+          >WEB<span class="logo-foot">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
