--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </head>
   <body>
     <!-- Header -->
-    <header><div class="container header-container">
+    <header class="header"><div class="container header-container">
       <nav class="header-nav">
         <a href="./index.html" class="link logo"
-          >WEB<span class="part-logo">STUDIO</span></a
+          >Web<span class="part-logo">Studio</span></a
         >
         <ul class="header-menu">
           <li><a href="" class="header-link link">Studio</a></li>
@@ -35,15 +35,15 @@
           <li><a href="" class="header-link link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="contacts-list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-link link"
+            <a href="mailto:info@devstudio.com" class="header-contacts link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-link link"
+            <a href="tel:+110001111111" class="header-contacts link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -63,28 +63,28 @@
       <section class="section"><div class="container">
         <h2 class="visually-hidden">Our goal</h2>
         <ul class="feature-list">
-          <li>
+          <li class="feature-item">
             <h3 class="feature-title">Strategy</h3>
             <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3 class="feature-title">Punctuality</h3>
             <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3 class="feature-title">Diligence</h3>
             <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3 class="feature-title">Technologies</h3>
             <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
@@ -100,9 +100,9 @@
       <section class="section sect-two"><div class="container">
         <h2 class="title">What are we doing</h2>
         <ul class="img-list">
-          <li><img src="./images/img_1.jpg" alt="Monitor" width="360" /></li>
-          <li><img src="./images/img_2.jpg" alt="Messenger" width="360" /></li>
-          <li>
+          <li class="img-item"><img src="./images/img_1.jpg" alt="Monitor" width="360" /></li>
+          <li class="img-item"><img src="./images/img_2.jpg" alt="Messenger" width="360" /></li>
+          <li class="img-item">
             <img src="./images/img_3.jpg" alt="Mobile phone" width="360" />
           </li>
         </ul>
@@ -110,7 +110,7 @@
 
       <!--  Section 3-->
 
-      <section class="section section-team">
+      <section class="section section-team"><div class="container">
         <h2 class="title-team">Our Team</h2>
         <ul class="card-list-container">
           <li class="team-card">
@@ -151,19 +151,20 @@
           </li>
         </ul>
       </div>
+    </div>
       </section>
     </main>
 
     <!--  Footer  -->
 
-    <footer><div class="container">
+    <footer><div class="container "><div>
       <a href="./index.html" class="link logo"
-        >WEB<span class="logo-foot">STUDIO</span></a
+        >Web<span class="logo-foot">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
-      </p>
+      </p></div>
     </div>
     </footer>
   </body>
