--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       <div class="container header-container">
           <nav class="header-nav">
             <a href="./index.html" class="link logo"
-              >WEB<span class="part-logo">STUDIO</span></a
+              >Web<span class="part-logo">Studio</span></a
             >
             <ul class="header-menu">
               <li>
@@ -41,15 +41,15 @@
               </li>
             </ul>
           </nav>
-          <address class="adress">
+          <address class="address">
             <ul class="contacts-list">
               <li>
-                <a href="mailto:info@devstudio.com" class="header-link link"
+                <a href="mailto:info@devstudio.com" class="header-contacts link"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a href="tel:+110001111111" class="header-link link"
+                <a href="tel:+110001111111" class="header-contacts link"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -62,8 +62,8 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <ul>
-            <div class="filters-container">
+          
+          <ul class="filters-container">
               <li>
                 <button type="button" class="filters-btn">All</button>
               </li>
@@ -75,11 +75,11 @@
               <li>
                 <button type="button" class="filters-btn">Marketing</button>
               </li>
-            </div>
           </ul>
+        
           <!-- Portfolio card -->
           <ul class="portfolio-card">
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.bankapp.jpg"
@@ -92,7 +92,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.payment.jpg"
@@ -105,7 +105,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.meditation.jpg"
@@ -118,7 +118,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.taxi.jpg"
@@ -131,7 +131,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.screen.jpg"
@@ -144,7 +144,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img src="./images/img.courses.jpg" alt="Woman" width="360" />
                 <div class="project-content">
@@ -153,7 +153,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.instagram.jpg"
@@ -166,7 +166,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/img.food.jpg"
@@ -179,7 +179,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link"
                 ><img
                   src="./images/img.coffe.jpg"
@@ -189,8 +189,7 @@
                 <div class="project-content">
                   <h2 class="title-card">Fresh Coffee</h2>
                   <p class="card-descr">Web Site</p>
-                </div></a
-              >
+                </div></a>
             </li>
           </ul>
         </div>
@@ -198,14 +197,14 @@
     </main>
     <!-- Footer -->
     <footer>
-      <div class="container">
+      <div class="container"><div>
         <a href="./index.html" class="link logo"
-          >WEB<span class="logo-foot">STUDIO</span></a
+          >Web<span class="logo-foot">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
-        </p>
+        </p></div>
       </div>
     </footer>
   </body>
